WV-51: подправка инфраструктуры для апи
